Added gitignores, removed extraneous files

--- a/MultiKeyboard/MultiKeyboard/MultiKeyboard.vcxproj
+++ b/MultiKeyboard/MultiKeyboard/MultiKeyboard.vcxproj
@@ -71,8 +71,8 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);C:\Users\Paul\AppData\Local\FlashDevelop\Apps\flexairsdk\4.6.0+22.0.0\include</IncludePath>
-    <LibraryPath>$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86);$(NETFXKitsDir)Lib\um\x86;C:\Users\Paul\AppData\Local\FlashDevelop\Apps\flexairsdk\4.6.0+22.0.0\lib\win</LibraryPath>
+    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);$(LOCALAPPDATA)\FlashDevelop\Apps\flexairsdk\4.6.0+22.0.0\include</IncludePath>
+    <LibraryPath>$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86);$(NETFXKitsDir)Lib\um\x86;$(LOCALAPPDATA)\FlashDevelop\Apps\flexairsdk\4.6.0+22.0.0\lib\win</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
